# google-workspace-mcp

./: .gitignore  .mcp.json  LICENSE  MCP_STANDARDS_COMPLIANCE_REPORT.md  MCP_STANDARDS_VIOLATIONS.md  README.md  REFACTORING_GUIDE.md  REFACTORING_STATUS.md  TEST_RESULTS.md  TROUBLESHOOTING_REPORT.md  pyproject.toml  pytest.ini  requirements-freeze.txt  requirements.txt  run_tests.sh  search_recent.py  setup.py
google_workspace_mcp/: __init__.py  __main__.py  drive_client.py  server.py  server_fastmcp.py
google_workspace_mcp/services/: docs_service.py  drive_service.py  sheets_service.py
google_workspace_mcp/tools/: __init__.py  docs_tools.py  drive_tools.py  forms_tools.py  gmail_tools.py  sheets_tools.py  slides_tools.py
google_workspace_mcp/utils/: base_models.py  error_handler.py  rate_limiter.py  response_formatter.py
src/: __main__.py  server.py
src/auth/: oauth_handler.py
src/services/: forms_service.py  gmail_service.py  slides_service.py
src/tools/: docs_tools.py  forms_tools.py  sheets_tools.py  slides_tools.py
src/utils/: cache.py  logger.py
tests/: README.md  __init__.py  conftest.py  test_docs_service.py  test_docs_tools.py  test_drive_service.py  test_drive_tools.py  test_forms_service.py  test_forms_tools.py  test_gmail_service.py  test_gmail_tools.py  test_integration.py  test_sheets_service.py  test_sheets_tools.py  test_slides_service.py  test_slides_tools.py
