[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-workspace-mcp"
version = "1.0.1"
description = "Google Workspace MCP Server for Claude Code - Drive, Docs, Sheets, Slides, Gmail integration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "crazybass81"}
]
keywords = ["mcp", "google-workspace", "google-drive", "google-docs", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "google-api-python-client==2.184.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.2",
    "google-auth==2.41.1",
    "google-api-core==2.26.0",
    "mcp==1.17.0",
    "aiohttp==3.12.15",
    "pydantic==2.11.4",
    "python-dotenv==1.1.0",
    "cryptography==46.0.2",
    "cachetools==5.5.2",
]

[project.urls]
Homepage = "https://github.com/crazybass81/google-workspace-mcp"
Repository = "https://github.com/crazybass81/google-workspace-mcp"
Issues = "https://github.com/crazybass81/google-workspace-mcp/issues"

[project.scripts]
google-workspace-mcp = "google_workspace_mcp.__main__:main"

[tool.setuptools.packages.find]
include = ["google_workspace_mcp*"]
exclude = ["tests*"]
